day03/mysql-pvc.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-po
  namespace: default
spec:
  volumes:
  - name: data-vol
    persistentVolumeClaim:
      claimName: mysql-pvc
  containers:
  - name: mysql-container
    image: mysql:8
    ports:
     - containerPort: 3306
    volumeMounts:
    - name: data-vol
      mountPath: /var/lib/mysql
      readOnly: true
    resources: {}
