day03/mysql.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-po
  namespace: default
spec:
  volumes:
  - name: config-vol
    configMap:
      name: config 
  #- name: data-vol
    #hostPath: # not typically used for production
    #  path: /opt/data
    #  type: DirectoryOrCreate
  #- name: data-vol
  #  emptyDir: {} # used for inter container sharing of data
  containers:
  #- name: nginx-container
  #  image: nginx-container
  #  ports:
  #  - containerPort: 80
  #  volumeMounts:
  #  - name: data-vol
  #    mountPath: /opt/tmp
  #  resource: {}
  - name: mysql-container
    image: mysql:8
    ports:
     - containerPort: 3306
     # /var/lib/mysql
    volumeMounts:
    - name: config-vol
      mountPath: /opt/config
      readOnly: true
    resources: {}
