day03/dov.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dovns

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dov-deploy
  namespace: dovns
  labels:
    app: dov
    name: dov-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dov
      name: dov-po
  template:
    metadata:
      labels:
        app: dov
        name: dov-po
    spec:
      containers:
      - name: dov-container
        image: ferdzzz/dov-bear:v1
        ports:
        - containerPort: 3000
        resources: # setting specific resources
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 100m
            memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: dov-svc
  namespace: dovns
  labels:
    app: dov
    name: dov-svc
spec:
  type: ClusterIP
  selector:
    app: dov
    name: dov-po
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dov-ing
  labels:
    app: dov
    name: dov-ing
spec:
  ingressClassName: nginx
  rules:
  - host: dov.116.203.255.68.nip.io # @http://nip.ip
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dov-svc
            port:
              number: 3000
