day03/ing-canary.yaml
---
  apiVersion: v1
  kind: Namespace
  metadata:
    name: api
  
  --- 
  apiVersion: networking.k8s.io/v1 
  kind: Ingress 
  metadata: 
    name: api-ing
    namespace: api
    labels: 
      app: api
      name: api-ing
  spec: 
    ingressClassName: nginx 
    rules:
    - host: api.144.126.241.179.nip.io
      http:
        paths: 
        - path: /
          pathType: Prefix
          backend: 
            service: 
              name: api-svc
              port: 
                number: 3000
  
  --- 
  apiVersion: networking.k8s.io/v1 
  kind: Ingress 
  metadata: 
    name: api-canary-ing
    namespace: api
    labels: 
      app: api
      name: api-canary-ing
    annotations:
      nginx.ingress.kubernetes.io/canary: "true"
      nginx.ingress.kubernetes.io/canary-weight: "33"
  spec: 
    ingressClassName: nginx 
    rules:
    - host: api.144.126.241.179.nip.io
      http:
        paths: 
        - path: /
          pathType: Prefix
          backend: 
            service: 
              name: api-v2-svc
              port: 
                number: 3000
